--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,20 @@
-node_modules
+#
+# danceDisplaySql - https://github.com/dance-display-sql/dance-display-sql.git
+#
+# Copyright (c) 2017 dance-display-sql
+#
+
+# Jetbrains Editors
+.idea/
+*.iml
+
+# Node & NPM
+node_modules/
+npm-debug.log
+
+# JSDoc
+jsdoc/
+apidoc/
+
+# Settings
+settings.*.json
