--- a/package.json
+++ b/package.json
@@ -1,24 +1,39 @@
 {
   "name": "dance-display-sql",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
-  },
+  "version": "0.0.0",
+  "description": "TODO add a description",
+  "title": "danceDisplaySql",
+  "author": "dance-display-sql <>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Gostron/dance-display-sql.git"
+    "url": "https://github.com/dance-display-sql/dance-display-sql.git"
   },
-  "author": "ABNER Peter",
-  "license": "GPL-3.0",
-  "bugs": {
-    "url": "https://github.com/Gostron/dance-display-sql/issues"
+  "readme": "TODO add a readme description",
+  "license": "TODO",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js --config=settings.dev.json --log=logs",
+    "jsdoc":  "./node_modules/.bin/jsdoc -r -c ./jsdoc-config.json -d ./jsdoc",
+    "apidoc": "./node_modules/.bin/apidoc -f \".*\\.js$\" -i ./app -o ./apidoc"
   },
-  "homepage": "https://github.com/Gostron/dance-display-sql#readme",
+  "bin": {
+    "dds": "server.js"
+  },
   "dependencies": {
-    "express": "^4.16.1",
-    "morgan": "^1.9.0"
+    "app-module-path": "2.2.0",
+    "bluesky-logger": "0.7.0",
+    "body-parser": "1.17.1",
+    "express": "4.15.2",
+    "lodash": "4.17.4",
+    "minimist": "1.2.0",
+    "moment": "2.18.1",
+    "mysql": "2.13.0",
+    "q": "1.4.0"
+  },
+  "devDependencies": {
+    "apidoc": "0.17.5",
+    "docdash": "0.4.0",
+    "jsdoc": "3.4.3",
+    "mocha": "3.2.0"
   }
 }
